--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Developed by OLI AHAMMED</title>
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200;300;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
@@ -53,7 +53,7 @@
         <div class="text_box">
         <h1>Hi there! We are the new kids on the block 
             and we build awesome websites and mobile apps.</h1>
-            <button class="header_btn" class="active"><a href="#contact" class="btn_name">WORK WITH US!</a></button>
+            <button class="header_btn"><a href="#contact" class="btn_name">WORK WITH US!</a></button>
         </div> 
       </div>   
     </header>
@@ -68,13 +68,13 @@
         </div>
         <div class="row services_section2">
             <div class="services_section2 col-lg-2 col-md-5 col-sm-10">
-                <img src="resources/img/flag icon.png" alt="">
+                <img src="resources/img/flag_icon.png" alt="">
                 <h4>Branding</h4>
                 <p>Lorem ipsum dolor sit amet, 
                     consectetuer adipiscing elit, sed diam nonummy nibh.</p>
             </div>
             <div class="services_section2 col-lg-2 col-md-5 col-sm-10">
-                <img src="resources/img/crayon icon.png" alt="">
+                <img src="resources/img/crayon_icon.png" alt="">
                 <h4>Design</h4>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem  </p>
             </div>
@@ -84,7 +84,7 @@
                 <p>At vero eos et accusamus et iusto odio dignissimos qui blanditiis praesentium.</p>
             </div>
             <div class="services_section2 col-lg-2 col-md-5 col-sm-10">
-                <img src="resources/img/rocket icon.png" alt="">
+                <img src="resources/img/rocket_icon.png" alt="">
                 <h4>ROCKET SCIENCE</h4>
                 <p>Et harum quidem rerum est et expedita distinctio. Nam libero tempore.</p>
             </div>
@@ -154,7 +154,6 @@
                     </div>
         </div>
     </div>
-    </div>
     <!--service section 3 finished-->
     <!--service section 4 start-->
     <div class="section4" id="skills">
@@ -166,19 +165,19 @@
         </div>
             <div class="row circles_section4">
                 <div class="single_skills_section4 col-lg-2 col-md-5 col-sm-10">
-                    <div class="circlechart"data-percentage="90"></div><br>
+                    <div class="circlechart" data-percentage="90"></div><br>
                     <h4>WEB DESIGN</h4>
                 </div>
                 <div class="single_skills_section4 col-lg-2 col-md-5 col-sm-10">
-                    <div class="circlechart"data-percentage="75"></div><br>
+                    <div class="circlechart" data-percentage="75"></div><br>
                     <h4>HTML / CSS</h4>
                 </div>
                 <div class="single_skills_section4 col-lg-2 col-md-5 col-sm-10">
-                    <div class="circlechart"data-percentage="70"></div><br>
+                    <div class="circlechart" data-percentage="70"></div><br>
                     <h4>GRAPHIC DESIGN</h4>
                 </div>
                 <div class="single_skills_section4 col-lg-2 col-md-5 col-sm-10">
-                    <div class="circlechart"data-percentage="85"></div><br>
+                    <div class="circlechart" data-percentage="85"></div><br>
                     <h4>UI / UX</h4>
                 </div>
             </div> 
@@ -229,27 +228,28 @@
                 <img src="resources/img/img5.jpg" alt="">
                 <p>“Nullam dapibus blandit orci, viverra gravida dui lobortis eget. Maecenas fringilla urna eu nisl scelerisque.”</p>
                 <h5>OLI AHAMMED SARKER</h5>
-                <p id="designation_section6">CEO of Pinterest</p>
+                <p class="designation_section6">CEO of Pinterest</p>
             </div>
             <div class="members_section6 col-lg-5">
                 <img src="resources/img/img6.jpg" alt="">
                 <p>“Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”</p>
                 <h5>ADRIANA LIMA</h5>
-                <p id="designation_section6">Founder of Instagram</p>
+                <p class="designation_section6">Founder of Instagram</p>
             </div>
             <div class="members_section6 col-lg-5">
                 <img src="resources/img/img7.jpg" alt="">
                 <p>“Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta.”</p>
                 <h5>ANNE HATHAWAY</h5>
-                <p id="designation_section6">Lead Designer at Behance</p>               
+                <p class="designation_section6">Lead Designer at Behance</p>               
             </div>
             <div class="members_section6 col-lg-5">
                 <img src="resources/img/img8.jpg" alt="">
                 <p>“Phasellus non purus vel arcu tempor commodo. Fusce semper, purus vel luctus molestie, risus sem cursus neque.”</p>
                 <h5>EMMA STONE</h5>
-                <p id="designation_section6">Co-Founder of Shazam</p>
+                <p class="designation_section6">Co-Founder of Shazam</p>
             </div>
         </div>
+    </div>
     <!--service section 6 finished-->
     <!--service section 7 start-->
     <div class="section7" id="contact">
@@ -258,7 +258,7 @@
                 <p>600 Pennsylvania Ave NW, Washington, DC 20500, United States of America. Tel: (202) 456-1111</p>
             </div>
             <div class="contact_form_section7">
-                <form action="https://formspree.io/f/{oliahammed54480000@gmail.com}" method="POST">
+                <form>
                     <div class="row">
                         <div class="col">
                             <input type="text" name="name" placeholder="Your name*" required>
@@ -267,7 +267,7 @@
                     </div>
                     <div class="row">
                         <div class="col">
-                            <textarea name="message" id="" cols="30" rows="7" placeholder="Enter you message*" required></textarea>
+                            <textarea name="message" cols="30" rows="7" placeholder="Enter you message*" required></textarea>
                         </div>
                     </div>
                 </form>
